// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component H2 Snapshot added optional style inline prop 1`] = `
<h2
  className="jsx-1697588386"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  Heading 1
</h2>
`;

exports[`Component H2 Snapshot primary color of the theme 1`] = `
<h2
  className="jsx-736270946"
  style={Object {}}
>
  Heading 2
</h2>
`;

exports[`Component H2 Snapshot secondary font-family of the theme 1`] = `
<h2
  className="jsx-1388904415"
  style={Object {}}
>
  Heading 2
</h2>
`;

exports[`Component H2 Snapshot without arguments, take the default values 1`] = `
<h2
  className="jsx-1697588386"
  style={Object {}}
>
  Heading 2
</h2>
`;
